--- a/dist.ini
+++ b/dist.ini
@@ -1,17 +1,18 @@
-name                = API-Wunderlist
-abstract            = Perl 5 API wrapper for Wunderlist
-main_module         = lib/API/Wunderlist.pm
-author              = Al Newkirk <anewkirk@ana.io>
-license             = Perl_5
-copyright_holder    = Al Newkirk
-copyright_year      = 2014
+name                                 = API-Wunderlist
+abstract                             = Perl 5 API wrapper for Wunderlist.com
+main_module                          = lib/API/Wunderlist.pm
+author                               = Al Newkirk <anewkirk@ana.io>
+license                              = Perl_5
+copyright_holder                     = Al Newkirk
+copyright_year                       = 2014
 
 [Authority]
-authority           = cpan:AWNCORP
-do_munging          = 0
+authority                            = cpan:AWNCORP
+do_munging                           = 0
 
 [MetaJSON]
 [MetaYAML]
+[ExecDir]
 
 [@Basic]
 
@@ -23,73 +24,82 @@ do_munging          = 0
 
 [PruneCruft]
 [PruneFiles]
-match               = ^\..+
-match               = ^DZP-.*
-match               = ^(devel|eg)/.*
-match               = \.(ini|pl|txt|yml)$
-match               = (TODO|tags)$
+match                                = ^\..+
+match                                = ^DZP-.*
+match                                = ^(devel|eg)/.*
+match                                = \.(ini|pl|txt|yml)$
+match                                = (TODO|tags)$
 
 [Run::BeforeBuild]
-run                 = rm -f cpanfile
-run                 = rm -f INSTALL
-run                 = rm -f CHANGES
-run                 = rm -f LICENSE
-run                 = rm -f README
-run                 = rm -f README.mkdn
-run                 = rm -f Makefile.PL
+run                                  = rm -f cpanfile
+run                                  = rm -f INSTALL
+run                                  = rm -f CHANGES
+run                                  = rm -f LICENSE
+run                                  = rm -f README
+run                                  = rm -f README.mkdn
+run                                  = rm -f Makefile.PL
 
 [CopyFilesFromBuild]
-copy                = cpanfile
-copy                = INSTALL
-copy                = CHANGES
-copy                = LICENSE
-copy                = README
-copy                = README.mkdn
-copy                = Makefile.PL
+copy                                 = cpanfile
+copy                                 = INSTALL
+copy                                 = CHANGES
+copy                                 = LICENSE
+copy                                 = README
+copy                                 = README.mkdn
+copy                                 = Makefile.PL
 
 [Git::CommitBuild]
-branch               = build/%b
-message              = Build %h (on %b)
-multiple_inheritance = 0
+branch                               = build/%b
+message                              = Build %h (on %b)
+multiple_inheritance                 = 0
 
 [ChangelogFromGit::CPAN::Changes]
-show_author         = 0
-max_age             = 365
-tag_regexp          = ^(\d+\.\d+)$
-file_name           = CHANGES
-wrap_column         = 79
-debug               = 0
+show_author                          = 0
+max_age                              = 365
+tag_regexp                           = ^(\d+\.\d+)$
+file_name                            = CHANGES
+wrap_column                          = 79
+debug                                = 0
 
 [@Git]
-changelog           = CHANGES
-tag_format          = %v
-tag_message         = Release: %v
-allow_dirty         = dist.ini
-allow_dirty         = CHANGES
-allow_dirty         = README
-allow_dirty         = README.mkdn
-allow_dirty         = .travis.yml
+changelog                            = CHANGES
+tag_format                           = %v
+tag_message                          = Release: %v
+allow_dirty                          = dist.ini
+allow_dirty                          = CHANGES
+allow_dirty                          = README
+allow_dirty                          = README.mkdn
+allow_dirty                          = .travis.yml
 
 [Git::NextVersion]
-first_version       = 0.03
-version_regexp      = ^(.+)$
+first_version                        = 0.03
+version_regexp                       = ^(.+)$
 
 [GitHub::Meta]
+homepage                             = 1
+repository.type                      = git
+repository.web                       = https://github.com/AccessAbundant/API-Wunderlist/
+repository.url                       = https://github.com/AccessAbundant/API-Wunderlist.git
+bugtracker.web                       = https://github.com/AccessAbundant/API-Wunderlist/issues
+remote                               = github
+
 [GitHub::Update]
-metacpan            = 1
+metacpan                             = 1
 
 [Prereqs]
-perl                 = 5.14.2
-Data::Object         = 0.17
-Extorter             = 0.10
-Function::Parameters = 1.0603
-Mojolicious          = 6.08
-Type::Tiny           = 1.000005
+perl                                 = 5.14.2
+Data::Object                         = 0.20
+Data::Object::Library                = 0.05
+Data::Object::Signatures             = 0.03
+Import::Into                         = 1.002004
+Mojolicious                          = 6.08
 
 [Prereqs / TestRequires]
-perl                = 5.14.2
+perl                                 = 5.14.2
 
 [TravisCI::StatusBadge]
+user                                 = AccessAbundant
+
 [CPANFile]
 
 ;[TravisYML]
@@ -98,7 +108,7 @@ perl                = 5.14.2
 ;[ReadmeFromPod]
 [ReadmeMarkdownFromPod]
 [ReadmeAnyFromPod / ReadmePodInRoot]
-type     = text
-filename = README
-location = root
+type                                 = text
+filename                             = README
+location                             = root
 
