Refactored to derive from API::Client.

--- a/dist.ini
+++ b/dist.ini
@@ -10,8 +10,8 @@ copyright_year                       = 2014
 authority                            = cpan:AWNCORP
 do_munging                           = 0
 
-[MetaJSON]
-[MetaYAML]
+;[MetaJSON]
+;[MetaYAML]
 [ExecDir]
 
 [@Basic]
@@ -78,9 +78,9 @@ version_regexp                       = ^(.+)$
 [GitHub::Meta]
 homepage                             = 1
 repository.type                      = git
-repository.web                       = https://github.com/AccessAbundant/API-Wunderlist/
-repository.url                       = https://github.com/AccessAbundant/API-Wunderlist.git
-bugtracker.web                       = https://github.com/AccessAbundant/API-Wunderlist/issues
+repository.web                       = https://github.com/alnewkirk/API-Wunderlist/
+repository.url                       = https://github.com/alnewkirk/API-Wunderlist.git
+bugtracker.web                       = https://github.com/alnewkirk/API-Wunderlist/issues
 remote                               = github
 
 [GitHub::Update]
@@ -88,18 +88,18 @@ metacpan                             = 1
 remote                               = github
 
 [Prereqs]
-perl                                 = 5.14.2
-Data::Object                         = 0.20
-Data::Object::Library                = 0.05
-Data::Object::Signatures             = 0.03
-Import::Into                         = 1.002004
-Mojolicious                          = 6.08
+perl                                 = 5.14.0
+API::Client                          = 0.01
+Data::Object                         = 0.55
+Mojolicious                          = 6.22
+Net::OAuth                           = 0.28
+namespace::autoclean                 = 0.27
 
 [Prereqs / TestRequires]
-perl                                 = 5.14.2
+perl                                 = 5.14.0
 
 [TravisCI::StatusBadge]
-user                                 = AccessAbundant
+user                                 = alnewkirk
 
 [CPANFile]
 
