Updated dist.ini to generate META files.

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name                                 = API-Wunderlist
-abstract                             = Perl 5 API wrapper for Wunderlist.com
+abstract                             = Wunderlist.com API Client
 main_module                          = lib/API/Wunderlist.pm
 author                               = Al Newkirk <anewkirk@ana.io>
 license                              = Perl_5
@@ -10,11 +10,13 @@ copyright_year                       = 2014
 authority                            = cpan:AWNCORP
 do_munging                           = 0
 
-;[MetaJSON]
-;[MetaYAML]
-[ExecDir]
+[@Filter]
+-bundle = @Basic
+-remove = MetaYAML
 
-[@Basic]
+[MetaJSON]
+[MetaYAML]
+[ExecDir]
 
 [ManifestSkip]
 [SurgicalPodWeaver]
